# depth_clustering

./: .gitignore  README.md  format_eclipse.xml
cmake/: FindQGLViewer.cmake
cmake/depth_clustering/: arm64.toolchain.cmake
config/: depth_clustering_config.json  visualization_layout_confidence.json  visualization_layout_moosmann.json  visualization_layout_score.json  visualization_layout_waymo.json
data/moosmann/velodyne_slam/scenario_1/: DATAFORMAT.txt  EVALUATION.txt  LICENSE.txt  depth_clustering_config.json  imu.cfg
data/waymo/: depth_clustering_config.json  frame_0.tiff  frame_1.tiff  frame_10.tiff  frame_100.tiff  frame_101.tiff  frame_102.tiff  frame_103.tiff  frame_104.tiff  frame_105.tiff  frame_106.tiff  frame_107.tiff  frame_108.tiff  frame_109.tiff  frame_11.tiff  frame_110.tiff  frame_111.tiff  frame_112.tiff  frame_113.tiff  frame_114.tiff  frame_115.tiff  frame_116.tiff  frame_117.tiff  frame_118.tiff  frame_119.tiff  frame_12.tiff  frame_120.tiff  frame_121.tiff  frame_122.tiff  frame_123.tiff  frame_124.tiff  frame_125.tiff  frame_126.tiff  frame_127.tiff  frame_128.tiff  frame_129.tiff  frame_13.tiff  frame_130.tiff  frame_131.tiff  frame_132.tiff  (+358 more)
data/waymo/segment-10153695247769592104_787_000_807_000_with_camera_labels/: depth_clustering_config.json  frame_lidar_0.tiff  frame_lidar_1.tiff  frame_lidar_102.tiff  frame_lidar_103.tiff  frame_lidar_110.tiff  frame_lidar_112.tiff  frame_lidar_114.tiff  frame_lidar_118.tiff  frame_lidar_119.tiff  frame_lidar_12.tiff  frame_lidar_121.tiff  frame_lidar_122.tiff  frame_lidar_126.tiff  frame_lidar_127.tiff  frame_lidar_129.tiff  frame_lidar_13.tiff  frame_lidar_130.tiff  frame_lidar_131.tiff  frame_lidar_134.tiff  frame_lidar_135.tiff  frame_lidar_137.tiff  frame_lidar_138.tiff  frame_lidar_139.tiff  frame_lidar_14.tiff  frame_lidar_142.tiff  frame_lidar_143.tiff  frame_lidar_146.tiff  frame_lidar_147.tiff  frame_lidar_150.tiff  frame_lidar_157.tiff  frame_lidar_159.tiff  frame_lidar_16.tiff  frame_lidar_162.tiff  frame_lidar_166.tiff  frame_lidar_167.tiff  frame_lidar_170.tiff  frame_lidar_171.tiff  frame_lidar_172.tiff  frame_lidar_173.tiff  (+62 more)
data/waymo/segment-10153695247769592104_787_000_807_000_with_camera_labels/frames_lidar/first_return/range/: frame_lidar_first_return_range_10.tiff  frame_lidar_first_return_range_100.tiff  (+95 more)
scripts/: depth_clustering.bash  setup.bash
scripts/depth_clustering/: depth_clustering.bash  setup.bash
src/: CMakeLists.txt
src/depth_clustering/: CMakeLists.txt
src/depth_clustering/api/: CMakeLists.txt  api.cpp  api.h  parameter.h  parameter_factory.cpp  parameter_factory.h
src/depth_clustering/applications/: CMakeLists.txt  depth_clustering.cpp  visualizer.cpp
src/depth_clustering/clusterers/: CMakeLists.txt  abstract_clusterer.h  image_based_clusterer.h
src/depth_clustering/communication/: CMakeLists.txt  abstract_sender.h
src/depth_clustering/ground_removal/: CMakeLists.txt  depth_ground_remover.cpp  depth_ground_remover.h
src/depth_clustering/image_labelers/: CMakeLists.txt  abstract_image_labeler.cpp  abstract_image_labeler.h  linear_image_labeler.h
src/depth_clustering/image_labelers/diff_helpers/: CMakeLists.txt  diff_factory.h
src/depth_clustering/post_processing/: CMakeLists.txt  bounding_box.cpp  bounding_box.h  camera_projection.cpp  camera_projection.h  logger.cpp  logger.h  logger_parameter.h  score.cpp  score.h
src/depth_clustering/projections/: CMakeLists.txt  cloud_projection.cpp  cloud_projection.h  projection_params.cpp  projection_params.h
src/depth_clustering/test/: CMakeLists.txt
src/depth_clustering/utils/: CMakeLists.txt  cloud.cpp  cloud.h  folder_reader.h  pose.h  rich_point.cpp  rich_point.h  velodyne_utils.cpp  velodyne_utils.h
src/depth_clustering/visualization/: CMakeLists.txt  visualization.cpp  visualization.h  visualization_layout.h
src/depth_clustering/visualization/drawables/: drawable_cloud.cpp  drawable_cloud.h  drawable_cube.cpp  drawable_cube.h  drawable_polygon3d.cpp  drawable_polygon3d.h
src/depth_clustering/visualization/ui/: visualization.ui
src/depth_clustering/visualization/utils/: utils.cpp  utils.h
src/depth_clustering/visualization/viewer/: CMakeLists.txt  viewer.cpp  viewer.h
src/src/: CMakeLists.txt
src/src/api/: CMakeLists.txt  api.cpp  api.h  api_parameter.h  depth_clustering.cpp  depth_clustering.h  main.cpp  parameter.h  parameter_factory.cpp  parameter_factory.h  test.cpp
src/src/applications/: CMakeLists.txt  camera_visualizer.cpp  depth_clustering.cpp  ground_truth_projection.cpp  lidar_visualizer.cpp
src/src/clusterers/: abstract_clusterer.h  image_based_clusterer.h
src/src/communication/: CMakeLists.txt
src/src/ground_removal/: CMakeLists.txt  depth_ground_remover.cpp  depth_ground_remover.h
src/src/image_labelers/: CMakeLists.txt
src/src/post_processing/: CMakeLists.txt  bounding_box.cpp  bounding_box.h  camera_projection.cpp  camera_projection.h  camera_projection_parameter.h  logger.cpp  logger.h  logger_parameter.h
src/src/projections/: projection_params.cpp  projection_params.h
src/src/qt/: CMakeLists.txt  main.cpp
src/src/qt/drawables/: CMakeLists.txt  object_painter.cpp  object_painter.h
src/src/qt/utils/: CMakeLists.txt
src/src/qt/viewer/: CMakeLists.txt
src/src/qt/widgets/: CMakeLists.txt  opengl_folder_player.cpp  opengl_folder_player.h
src/src/qt/widgets/ui/: opengl_folder_player.ui
src/src/utils/: cloud.cpp  cloud.h  folder_reader.cpp  rich_point.cpp  rich_point.h  velodyne_utils.cpp  velodyne_utils.h
src/src/visualization/: CMakeLists.txt  visualization.cpp  visualization.h
src/src/visualization/drawables/: CMakeLists.txt  drawable_cloud.cpp  drawable_cloud.h  drawable_cube.cpp  drawable_polygon3d.h  object_painter.cpp
src/src/visualization/ui/: visualization.ui
src/src/visualization/utils/: CMakeLists.txt  utils.cpp  utils.h
src/src/visualization/viewer/: viewer.cpp  viewer.h
src/src/visualization/widgets/: CMakeLists.txt  base_viewer_widget.cpp  base_viewer_widget.h  opengl_folder_player.cpp  opengl_folder_player.h
